# abstraps

./: .gitignore  Cargo.toml  README.md  build.rs  wrapper.h
.github/workflows/: ci.yml
src/: builder.rs  interp.rs  ir.rs  lib.rs  mlir.rs  type_propagation.rs  typeinf.rs
src/backends/: mlir.rs  mod.rs
src/backends/cranelift/: jit.rs
src/backends/mlir/: bindings.rs  builder.rs  mod.rs
src/core/: absint.rs  builder.rs  diagnostics.rs  display.rs  graph.rs  interfaces.rs  interpreter.rs  ir.rs  key.rs  mod.rs  pass_manager.rs  region.rs  ssacfg.rs
src/core/builtin/: attributes.rs  mod.rs  primitives.rs  traits.rs
src/dialects/: mod.rs
src/dialects/arith/: intrinsics.rs  mod.rs  primitives.rs  traits.rs
src/dialects/base/: intrinsics.rs  mod.rs  primitives.rs
src/dialects/builtin/: attributes.rs  intrinsics.rs  lattice.rs  mod.rs  passes.rs  traits.rs
src/dialects/memref/: intrinsics.rs  mod.rs  primitives.rs  traits.rs
src/dialects/std/: intrinsics.rs  mod.rs
src/dialects/symbolic/: mod.rs
src/ir/: builder.rs  builtin.rs  core.rs  graph.rs  interp.rs  mod.rs  ssacfg.rs
src/patterns/: mod.rs  trace.rs  typeinf.rs
tests/: arith.rs  builder.rs  builtins.rs  concrete.rs  extension.rs  inference.rs  interfaces.rs  operation_traits.rs  passes.rs  typeinf.rs
