[package]
name = "abstraps"
version = "0.1.5"
edition = "2021"
authors = ["McCoy R. Becker"]
description = "Extensible compiler middle layer with abstract interpretation and code generation to MLIR."
repository = "https://github.com/femtomc/abstraps"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
color-eyre = "0.5.11"
downcast-rs = "1.2.0"
futures = "0.3.19"
indenter = "0.3.3"
lazy_static = "1.4.0"
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
yansi = "0.5.0"

[build-dependencies]
bindgen = "0.59.1"

[features]
defaults = ["std"]
std = []
mlir = []
